--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -8,8 +8,8 @@
 
     <body class="h-screen flex flex-col max-w-full">
         <div class="flex items-center">
-            <input id="ifield" class="flex-grow inset-0 p-2.25 z-10 max-w-full bg-transparent placeholder:text-slate-400 text-slate-700 border text-lg border-slate-200 transition duration-300 ease focus:outline-none focus:border-kemono hover:border-slate-300 shadow-sm shadow-kemono focus:shadow" placeholder="Search creator...">
-            <button type="button" id="button" class="bg-kemono z-11 hover:bg-[#dc5b00] h-12 w-12 inset-0 align-middle shadow-sm shadow-kemono">⭐</button>
+            <input id="input_field" class="flex-grow inset-0 p-2.25 z-10 max-w-full bg-transparent placeholder:text-slate-400 text-slate-700 border text-lg border-slate-200 transition duration-300 ease focus:outline-none focus:border-kemono hover:border-slate-300 shadow-sm shadow-kemono focus:shadow" placeholder="Search creator...">
+            <button type="button" id="fav_button" class="bg-kemono z-11 hover:bg-[#dc5b00] h-12 w-12 inset-0 align-middle shadow-sm shadow-kemono">⭐</button>
         </div>
 
         <ul id="clist" class="flex-1 overflow-y-scroll space-y-4 no-scrollbar p-3">    
