fixed clickable notifications

--- a/src/ui/notification.html
+++ b/src/ui/notification.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-    <body class="flex items-center justify-center h-screen">
+    <body id="notification_body" class="flex items-center justify-center h-screen">
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
