--- a/src/ui/notification.html
+++ b/src/ui/notification.html
@@ -6,11 +6,11 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <link href="./output.css" rel="stylesheet">
         </head>
-        <div class="flex rounded-sm w-[480px] h-[80px] bg-[#222222] border-t-4 border-[#FF0077] shadow-[0px_0px_10px_0px_rgba(255,255,255,0.1)]">
-            <a id="notification_link" href="" target="_blank" class="flex w-full mr-10">
+        <div class="flex overflow-clip rounded-sm w-[480px] h-[80px] bg-[#222222] border-t-4 border-[#FF0077] shadow-[0px_0px_10px_0px_rgba(255,255,255,0.1)]">
+            <a id="notification_link" href="" target="_blank" class="flex w-full mr-10 overflow-clip">
                 <img id="image" src="https://kemono.su/favicon.ico" alt="" class="size-7 mt-3 ml-3 rounded-lg object-cover"/>
-                <div class="flex-col flex w-full pr-12 ">
-                    <p id="title" class="text-[#DBE0D8] mt-4 font-semibold ml-3 text-xs ">TEXT</p>
+                <div class="flex-col flex w-full pr-12 overflow-clip">
+                    <p id="title" class="text-[#DBE0D8] mt-4 font-semibold ml-3 text-xs">TEXT</p>
                     <p id="message" class="text-[#DBE0D8] mt-4 ml-3 text-xs ">HERE TOO</p>
                 </div>
             </a>
